--- a/view/admin/community-storyTag.html
+++ b/view/admin/community-storyTag.html
@@ -25,6 +25,27 @@ body{
     transition: .33s,cubic-bezier(.685,.0473,.346,1);
 }
 
+/* 페이징 */
+.admin_page{
+    min-height: 100px;
+    margin: 30px 0;
+}
+#admin_items .pagination{
+    justify-content: center;
+}
+#admin_items .page-item.active .page-link{
+    background-color: #35ab6f;
+    border-color: #35ab6f;
+    color: white;
+}
+#admin_items a{
+    color: #424242;
+}
+#admin_items .page-link:focus{
+    box-shadow: none;
+}
+
+
 /* 반응형 */
 @media(max-width: 991px){
     .sidebar{
@@ -478,11 +499,11 @@ select::-ms-expand{
                 <div class="search_date">
                     <div class="move_input">
                         <label>시작일</label>
-                        <input type="text" class="datepicker s_date">
+                        <input type="text" id="s_date" class="datepicker s_date">
                     </div>
                     <div class="move_input">
                         <label>종료일</label>
-                        <input type="text" class="datepicker e_date">
+                        <input type="text" id="e_date" class="datepicker e_date">
                     </div>
                 </div>
 
@@ -491,17 +512,15 @@ select::-ms-expand{
                     <label class="move_label">검색종류</label>
                     <label for="sele2"><select name="search_category" id="sele2">
                         <option value="0"></option>
-                        <option value="1">주문번호</option>
-                        <option value="2">제품명</option>
-                        <option value="3">배송지역</option>
-                        <option value="4">주문자</option>
-                        <option value="5">전화번호</option>
+                        <option value="1">게시글번호</option>
+                        <option value="2">제목</option>
+                        <option value="3">작성자</option>
                     </select><i class="fas fa-sort-down"></i></label>
                 </div>
 
                 <!-- 검색 -->
                 <div class="search">
-                    <input type="text" placeholder="검색...">
+                    <input type="text" id="searchText" placeholder="검색...">
                     <button type="button" class="search_btn"><i class="fas fa-search"></i></button>
                 </div>
 
@@ -514,7 +533,7 @@ select::-ms-expand{
                 
                 <div class="select_status">
                     <label for="sele1"><select name="dly_status" id="sele1">
-                        <option>-작성상태-</option>
+                        <option value="0">-작성상태-</option>
                         <option value="1">입력대기</option>
                         <option value="2">입력완료</option>
                     </select><i class="fas fa-sort-down"></i></label>
@@ -543,11 +562,15 @@ select::-ms-expand{
         </div>
 
         
-        <div class="row" style="margin-top: 20px; justify-content:center; height: 20px;">
-            <div class="col offset-xl-3">
-                <nav aria-label="Page navigation">
-                    <ul class="pagination" id="pagination">123</ul>
-                </nav>
+        <div class="admin_page" id="admin_items">
+            <!-- 배송현황 페이지 번호 -->
+            <!-- Pagination -->
+            <div id="reviewPage" class="row" style="margin-top: 20px;" style="justify-content:center;">
+                <div class="col">
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination" id="pagination"></ul>
+                    </nav>
+                </div>
             </div>
         </div>
         
@@ -565,8 +588,16 @@ select::-ms-expand{
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/ko.js"></script> <!-- 날짜 포맷 라이브러리 -->
 <script src="../../js/includeHTML.js"></script>
 <script src="../../js/adminSide.js"></script>
+<script type="text/javascript" src="../../js/jquery.twbsPagination.min.js"></script>
 
 <script>
+
+let selectVal1=0;
+let selectVal2=0;
+let sdate=new Date('1900-1-1');
+let edate=new Date('2200-12-31');
+let searchText = "";
+
 $(document).ready(function() {
 
     $('div[name=itemDetail]').hide();
@@ -588,10 +619,12 @@ $(document).ready(function() {
             $('.move_label').removeClass('active')
         }
     });
+    /*
     $('.search input').keypress( function() {
         console.log( $(this).val())
         $('.search_btn').click()
     });
+    */
     $('#table1 tbody tr').click( function() { //테이블 누르면 체크
         let tr = $(this).find('input[type="checkbox"]');
         let c = tr.prop("checked");
@@ -599,14 +632,6 @@ $(document).ready(function() {
             tr.prop("checked",false);
         }else{
             tr.prop("checked",true);
-        }
-        autoCheck()
-    });
-
-    // 체크박스 전체선택, 전체해제
-    $(document).on("click", '#table1 input[type="checkbox"]', function () {
-        if($(this).attr('name') != 'chk'){
-            $('#table1 table').find('input[type="checkbox"]').prop("checked", $(this).is(":checked"));
         }
         autoCheck()
     });
@@ -637,6 +662,31 @@ $(document).ready(function() {
 
 });
 
+$('.search_btn').click(function() {
+
+    if ($('#s_date').val() != "") sdate = new Date($('#s_date').val());
+    if ($('#e_date').val() != "") edate = new Date($('#e_date').val());
+    edate.setHours(edate.getHours()+23);
+    edate.setMinutes(edate.getMinutes()+59);
+    selectVal1 = $('#sele1').val();
+    selectVal2 = $('#sele2').val();
+    searchText = $('#searchText').val();
+
+    if(selectVal2 == 0 && searchText != "") {
+        alert('검색종류를 선택해주세요.');
+        return;
+    }
+    if(selectVal2 == 1 && isNaN(searchText)) {
+        alert('번호로 검색해주세요.');
+        return;
+    }
+
+    getStoryTagList(0);
+    getStoryTagCount();
+});
+
+
+
 // 금액 콤마 삽입 정규식
 function makeComma(str) {
     str = String(str);
@@ -644,32 +694,27 @@ function makeComma(str) {
 };
 
 
-function autoCheck() {
-    let chkLength = $('input:checkbox[name="chk"]');
-    let chkLength2 = $('input:checkbox[name="chk"]:checked');
-
-    if (chkLength.length == chkLength2.length) {
-        $('#cb').prop("checked", true);
-        $('#checkbox_all').find('span').text('전체해제');
-    } else {
-        $('#cb').prop("checked", false);
-        $('#checkbox_all').find('span').text('전체체크');
-    }
-};
-
 let pattern = /([0-2][0-9]{3})-([0-1][0-9])-([0-3][0-9]) ([0-5][0-9]):([0-5][0-9]):([0-5][0-9])(([\-\+]([0-1][0-9])\:00))?/;
 
 
 // '스토리 글' 리스트
-getStoryTagList();
-function getStoryTagList() {
+getStoryTagList(0);
+function getStoryTagList(pageNum) {
     $.ajax({
         url: "http://192.168.0.231:3000/getStoryTagList",
         type: "get",
+        data: {
+            "selectVal1" : selectVal1,
+            "selectVal2" : selectVal2,
+            "pageNum": pageNum,
+            "startDate": sdate,
+            "endDate": edate,
+            "searchText": searchText
+        },
         success: function (list) {
 
             console.log(list);
-
+            $("#storyTagList").children().remove();
             let app = ""
             if (Object.keys(list).length == 0) {
 
@@ -796,6 +841,74 @@ function getStoryTagList() {
         }
     });
 };
+
+
+// 글 총 수 가져오기
+getStoryTagCount()
+function getStoryTagCount() {
+
+    $.ajax({
+        url: "http://192.168.0.231:3000/getStoryTagCount",
+        type: "get",
+        data: {
+            "selectVal1" : selectVal1,
+            "selectVal2" : selectVal2,
+            "startDate": sdate,
+            "endDate": edate,
+            "searchText": searchText
+        },
+        success: function (totalCount) {
+            console.log(totalCount);
+            loadPage(totalCount);
+        },
+        error: function () {
+            alert('getStoryTagCount() error');
+        }
+    });
+
+};
+
+
+// 글 페이징 처리
+function loadPage(totalCount) {
+
+    let pageSize = 10;
+    let nowPage = 1;
+    let _totalPages = Math.floor(totalCount / pageSize);
+    if (totalCount % pageSize > 0) {
+        _totalPages++;
+    }
+
+    $("#pagination").twbsPagination('destroy');	// 데이터가 갱신되면 페이징 갱신
+
+
+    $("#pagination").twbsPagination({
+        //	startPage: 1,
+        totalPages: _totalPages,
+        visiblePages: 10,
+        first: '<span aria-hidden="true">«</span>',
+        prev: false,
+        next: false,
+        last: '<span aria-hidden="true">»</span>',
+        initiateStartPageClick: false,		// onPageClick 자동 실행되지 않도록 한다
+        onPageClick: function (event, page) {
+            nowPage = page;
+            getStoryTagList(page-1);
+        },
+    });
+
+    //$("#pagination").twbsPagination('changeTotalPages', _totalPages, nowPage);
+
+};
+
+
+// 입력상태 select
+$(document).on('change', '[name=dly_status]', function() {
+    selectVal1 = $(this).val();
+    getStoryTagList(0);
+    getStoryTagCount();
+});
+
 
 // 메인 이미지 클릭 (좌표 검색)
 $(document).on('click', 'div[name=userImg]', function(event) {
