--- a/view/admin/sidebar.html
+++ b/view/admin/sidebar.html
@@ -210,7 +210,7 @@ a.menu_footer{
                         <ul class="menu">
                             <li><button class="btn_menu_s active" type="button" onclick="location.href='community-userManage.html'"><i class="fas fa-user-cog"></i> 회원관리</button></li>
                             <li><button class="btn_menu_s" type="button" onclick="location.href='community-storyTag.html'"><i class="fas fa-tags"></i> 사진태그등록</button></li>
-                            <li><button class="btn_menu_s" type="button"><i class="far fa-edit"></i> 게시판 관리</button></li>
+                            <!-- <li><button class="btn_menu_s" type="button"><i class="far fa-edit"></i> 게시판 관리</button></li> -->
                             <li><button class="btn_menu_s" type="button"><i class="far fa-calendar-check"></i> 이벤트 등록</button></li>
                         </ul>
                     </div>
