--- a/view/store/orderAf.html
+++ b/view/store/orderAf.html
@@ -141,6 +141,23 @@
     <div class="col-xl-3"></div>
 </div>
     <footer include-html="../commons/footer.html"></footer>
+    
+    <script>
+    orderAflist();
+    
+        function orderAflist(){
+            $.ajax({
+                url:"http://localhost:3000/orderAf",
+                type:"post",
+                data:data,
+                success:function(data){
+                    alert('orderAflist suc');
+                }, error:function(){
+                    alert('orderAflist fail');
+                }
+            });
+        }
+    </script>
 </body>
 <script src="../../assets/js/jquery.min.js"></script>
 <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
